# pygitops

./: .bumpversion.cfg  .coveragerc  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  SECURITY.md  docker-compose.yaml  index.html  mkdocs.yml  pyproject.toml  pytest.ini  renovate.json  requirements-docs.txt  requirements-test.txt  requirements.txt  setup.cfg  sitemap.xml  versions.json
.github/: dependabot.yml
.github/workflows/: detect_version_bump.yml  lint.yml  main.yml  python-publish.yml
0.12.0/: 404.html  index.html  sitemap.xml
0.12.0/api/: index.html
0.12.0/development-guide/: index.html
0.12.0/making-changes-on-feature-branch/: index.html
0.12.0/updating-repo/: index.html
0.12.0/why-pygitops/: index.html
0.12.1/: 404.html  index.html  sitemap.xml
0.12.1/api/: index.html
0.12.1/development-guide/: index.html
0.12.1/making-changes-on-feature-branch/: index.html
0.12.1/updating-repo/: index.html
0.12.1/why-pygitops/: index.html
0.13.0/: 404.html  index.html  sitemap.xml
0.13.0/api/: index.html
0.13.0/development-guide/: index.html
0.13.0/making-changes-on-feature-branch/: index.html
0.13.0/updating-repo/: index.html
0.13.0/why-pygitops/: index.html
0.13.2/: 404.html  index.html  sitemap.xml
0.13.2/api/: index.html
0.13.2/development-guide/: index.html
0.13.2/making-changes-on-feature-branch/: index.html
0.13.2/updating-repo/: index.html
0.13.2/why-pygitops/: index.html
0.14.0/: 404.html  index.html  sitemap.xml
0.14.0/api/: index.html
0.14.0/development-guide/: index.html
0.14.0/making-changes-on-feature-branch/: index.html
0.14.0/updating-repo/: index.html
0.14.0/why-pygitops/: index.html
0.15.0/: 404.html  index.html  sitemap.xml
0.15.0/api/: index.html
0.15.0/development-guide/: index.html
0.15.0/making-changes-on-feature-branch/: index.html
0.15.0/updating-repo/: index.html
0.15.0/why-pygitops/: index.html
0.16.0/: 404.html  index.html  sitemap.xml
0.16.0/api/: index.html
0.16.0/development-guide/: index.html
0.16.0/making-changes-on-feature-branch/: index.html
0.16.0/updating-repo/: index.html
0.16.0/why-pygitops/: index.html
0.16.1/: 404.html  index.html  sitemap.xml
0.16.1/api/: index.html
0.16.1/development-guide/: index.html
0.16.1/making-changes-on-feature-branch/: index.html
0.16.1/updating-repo/: index.html
0.16.1/why-pygitops/: index.html
0.17.0/: 404.html  index.html  sitemap.xml
0.17.0/api/: index.html
0.17.0/changelog/: index.html
0.17.0/development-guide/: index.html
0.17.0/making-changes-on-feature-branch/: index.html
0.17.0/search/: search_index.json
0.17.0/updating-repo/: index.html
0.17.0/why-pygitops/: index.html
0.18.0/: 404.html  index.html  objects.inv  sitemap.xml
0.18.0/api/: index.html
0.18.0/changelog/: index.html
0.18.0/development-guide/: index.html
0.18.0/making-changes-on-feature-branch/: index.html
0.18.0/search/: search_index.json
0.18.0/updating-repo/: index.html
0.18.0/why-pygitops/: index.html
api/: index.html
dev/: 404.html  api.html  development-guide.html  index.html  making-changes-on-feature-branch.html  objects.inv  sitemap.xml  updating-repo.html  why-pygitops.html
dev/api/: index.html
dev/development-guide/: index.html
dev/making-changes-on-feature-branch/: index.html
dev/updating-repo/: index.html
dev/why-pygitops/: index.html
development-guide/: index.html
docker/: bump_version.sh  devbox.dockerfile  lock_requirements.sh  run_tests.sh
docs/: api.md  development-guide.md  index.md  making-changes-on-feature-branch.md  updating-repo.md  why-pygitops.md
docs/css/: mkdocstrings.css
latest/api/: index.html
latest/development-guide/: index.html
making-changes-on-feature-branch/: index.html
pygitops/: __init__.py  _constants.py  _util.py  exceptions.py  github_util.py  operations.py  remote_git_utils.py  types.py
search/: search_index.json
tests/: test_github_util.py  test_operations.py  test_util.py  util.py
updating-repo/: index.html
why-pygitops/: index.html
(+4 files in other folders)
