[build-system]
requires = ["hatchling==1.18.0"]
build-backend = "hatchling.build"

[project]
name = "pygitops"
version = "0.17.0"
description = "Wrapper for low-level git logic. Useful for systems automating git operations."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Josh Woodward", email = "josh.woodward2693@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "filelock>=3.4,<4",
    "GitPython>=3.1,<4",
]

[project.urls]
Homepage = "https://github.com/wayfair-incubator/pygitops"
changelog = "https://github.com/wayfair-incubator/pygitops/blob/main/CHANGELOG.md"
issues = "https://github.com/wayfair-incubator/pygitops/issues"
documentation = "https://wayfair-incubator.github.io/pygitops"

[tool.hatch.build.targets.sdist]
include = [
    "/pygitops",
]

# type checking
[tool.mypy]
ignore_missing_imports = true

# testing
[tool.pytest.ini_options]
addopts = "--verbose --cov=pygitops --cov-report xml:/tmp/coverage.xml --cov-report term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
data_file = "/tmp/pygitops_coverage"

[tool.coverage.report]
fail_under = 0
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover"
]

# linting and formatting with ruff
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (security)
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # assert used (acceptable in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105"]  # test credentials are not real secrets
"pygitops/remote_git_utils.py" = ["S105"]  # regex patterns for scrubbing are not secrets

[tool.ruff.lint.isort]
known-first-party = ["pygitops"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# version bumping
[tool.hyper-bump-it.git.actions]
commit = "create-and-push"
branch = "create-and-push"

[[tool.hyper-bump-it.files]]
file_glob = "pyproject.toml"
keystone = true
search_format_pattern = "version = \"{version}\""

[[tool.hyper-bump-it.files]]
file_glob = "pygitops/__init__.py"

[[tool.hyper-bump-it.files]]
file_glob = "docs/index.md"
search_format_pattern = "Pygitops - {version}"

[[tool.hyper-bump-it.files]]
file_glob = "CHANGELOG.md"
search_format_pattern = "## [Unreleased]"
replace_format_pattern = """## [Unreleased]

## [{version}] - {today}"""
