[metadata]
name = pygitops
url = https://github.com/wayfair-incubator/pygitops
author = Josh Woodward
author_email = josh.woodward2693@gmail.com
version = 0.12.1
description = Wrapper for low-level git logic. Useful for systems automating git operations.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]

python_requires = >=3.6
install_requires =
    dataclasses~=0.8; python_version < '3.7'
    filelock~=3.0
    GitPython>=3.1,<=3.1.18
packages = find:

[options.packages.find]
exclude = "*.tests", "*.tests.*", "tests.*", "tests"
